some changes are added in foooter

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
-            <div class="panel-ops">
+            <div class="panel-ops ">
                 <p>Today's Deals  </p>
                 <p>Costomer Service</p>
                 <p> Ragistry</p>
@@ -135,33 +135,33 @@
             <a>Amazon Devices</a>
             <a>Amazon Science</a>
             </ul>
-             <ul>
-            <p>Get to Konow Us</p>
-            <a>Carriers</a>
-            <a>Blog</a>
-            <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+            <ul>
+            <p>	Connect with Us</p>
+            <a>Facebook</a>
+            <a>Twitter</a>
+            <a>Instagram</a>
             </ul>
              <ul>
-            <p>Get to Konow Us</p>
-            <a>Carriers</a>
-            <a>Blog</a>
-            <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+            <p>Make Money with Us</p>
+            <a>Sell on Amazon</a>
+            <a>Sell under Amazon Accelerator</a>
+            <a>Amazon Global Selling</a>
+            <a>Supply to Amazon</a>
+            <a>Become an Affiliate</a>
+            <a>Fulfilment by Amazon</a>
+            <a>Advertise Your Products</a>
+            <a>Amazon Pay on Merchants</a>
             </ul>
              <ul>
-            <p>Get to Konow Us</p>
-            <a>Carriers</a>
-            <a>Blog</a>
+            <p>Let Us Help You</p>
+            <a>Your Account</a>
+            <a>Returns Centre</a>
             <a>About Amazon</a>
-            <a>Investor Relations</a>
-            <a>Amazon Devices</a>
-            <a>Amazon Science</a>
+            <a>Recalls and Product Safety Alerts</a>
+            <a>Amazon App Download</a>
+            <a>Help</a>
             </ul>
+             
         </div>
         <div class="foot-panel3">
             <div class="logo">
